Added all the logic
