# docs/swagger.json
@@ -8,11 +8,11 @@
         "version": "1.0"
     },
     "host": "localhost:8080",
-    "basePath": "/api",
+    "basePath": "/",
     "paths": {
         "/lastquotes": {
             "get": {
-                "description": "Get",
+                "description": "Get last quotes with time and rate",
                 "consumes": [
                     "application/json"
                 ],
@@ -27,8 +27,61 @@
                     {
                         "type": "string",
                         "description": "Сurrency code",
-                        "name": "code",
-                        "in": "path",
+                        "name": "CurrencyCode",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Response"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/model.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/quotesbyid": {
+            "get": {
+                "description": "Get Get quotes rate by id from redis",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Quotes"
+                ],
+                "summary": "Get quotes rate by id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "quotes",
+                        "name": "UpdateId",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -64,59 +117,8 @@
             }
         },
         "/updatequotes": {
-            "get": {
-                "description": "Get",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Quotes"
-                ],
-                "summary": "Get quotes rate by id",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "quotes",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/model.Response"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/model.Response"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/model.Response"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/model.Response"
-                        }
-                    }
-                }
-            },
             "post": {
-                "description": "Update",
+                "description": "Updating the quote in the background",
                 "consumes": [
                     "application/json"
                 ],
@@ -129,10 +131,10 @@
                 "summary": "Update Quotes Rate",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "Сurrency code",
-                        "name": "code",
-                        "in": "path",
+                        "name": "CurrencyCode",
+                        "in": "query",
                         "required": true
                     }
                 ],
